--- a/platformio.ini
+++ b/platformio.ini
@@ -1,4 +1,4 @@
-cd ; PlatformIO Project Configuration File
+; PlatformIO Project Configuration File
 ;
 ;   Build options: build flags, source filter
 ;   Upload options: custom upload port, speed and extra flags
@@ -12,6 +12,10 @@ cd ; PlatformIO Project Configuration File
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
+monitor_speed = 115200
+upload_speed = 921600
 lib_deps = 
 	adafruit/DHT sensor library@^1.4.6
 	mathworks/ThingSpeak@^2.0.0
+
+src_filter = +<TouchPin.cpp>-<BlinkLed.cpp>
