--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,5 @@ framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
 lib_deps = 
-	adafruit/DHT sensor library@^1.4.6
-	mathworks/ThingSpeak@^2.0.0
-
-src_filter = +<TouchPin.cpp>-<BlinkLed.cpp>
+	chris--a/Keypad@^3.1.1
+src_filter = +<Keypad.cpp>
