--- a/platformio.ini
+++ b/platformio.ini
@@ -16,4 +16,4 @@ monitor_speed = 115200
 upload_speed = 921600
 lib_deps = 
 	chris--a/Keypad@^3.1.1
-src_filter = +<Keypad.cpp>
+src_filter = +<PWMled.cpp>
