--- a/platformio.ini
+++ b/platformio.ini
@@ -16,4 +16,8 @@ monitor_speed = 115200
 upload_speed = 921600
 lib_deps = 
 	chris--a/Keypad@^3.1.1
+	madhephaestus/ESP32Servo@^3.0.6
+	waspinator/AccelStepper@^1.64
+	iakop/LiquidCrystal_I2C_ESP32@^1.1.6
+	ericksimoes/Ultrasonic@^3.0.0
 src_filter = +<PWMled.cpp>
