--- a/platformio.ini
+++ b/platformio.ini
@@ -20,4 +20,5 @@ lib_deps =
 	waspinator/AccelStepper@^1.64
 	iakop/LiquidCrystal_I2C_ESP32@^1.1.6
 	ericksimoes/Ultrasonic@^3.0.0
-src_filter = +<PWMled.cpp>
+	adafruit/DHT sensor library@^1.4.6
+src_filter = +<Temp.cpp>
