--- a/platformio.ini
+++ b/platformio.ini
@@ -21,4 +21,5 @@ lib_deps =
 	iakop/LiquidCrystal_I2C_ESP32@^1.1.6
 	ericksimoes/Ultrasonic@^3.0.0
 	adafruit/DHT sensor library@^1.4.6
-build_src_filter= +<DeepBurglar.cpp>
+	featherfly/SoftwareSerial@^1.0
+build_src_filter = +<DeepBurglar.cpp>
