--- a/platformio.ini
+++ b/platformio.ini
@@ -15,11 +15,7 @@ framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
 lib_deps = 
-	chris--a/Keypad@^3.1.1
-	madhephaestus/ESP32Servo@^3.0.6
-	waspinator/AccelStepper@^1.64
 	iakop/LiquidCrystal_I2C_ESP32@^1.1.6
 	ericksimoes/Ultrasonic@^3.0.0
-	adafruit/DHT sensor library@^1.4.6
-	featherfly/SoftwareSerial@^1.0
-build_src_filter = +<DeepBurglar.cpp>
+	blynkkk/Blynk@^1.3.2
+build_src_filter = +<SmartLight.cpp>
